--- a/centos-build.yaml
+++ b/centos-build.yaml
@@ -36,7 +36,7 @@ post-processors:
 
 provisioners:
   - type: shell
-    execute_command: echo 'vagrant' | "{{ .Vars }}" sudo -S -E bash '"{{ .Path }}"'
+    execute_command: echo 'vagrant' | {{ .Vars }} sudo -S -E bash '{{ .Path }}'
     override:
       virtualbox-iso:
         scripts:
